fix(btn): fix extra margin when using tooltip (#1729)
[COM-700]

--- a/packages/vapor/scss/elements/btn.scss
+++ b/packages/vapor/scss/elements/btn.scss
@@ -193,6 +193,7 @@
 .btn-container {
     display: inline-block;
     margin: 0;
+    vertical-align: middle;
 
     .btn[disabled] {
         pointer-events: none;
